# wingpanel-indicator-ayatana

./: README.md  com.github.lafydev.wingpanel-indicator-ayatana_2.0.8_odin.deb  meson.build
.github/: FUNDING.yml
data/: meson.build  my.gschema.xml.in
debian/: changelog  control
meson/: post_install.py
po/: LINGUAS  POTFILES  ayatana-indicator.pot  en.po  meson.build  zh.po  zh_CN.po  zh_HK.po
po/extra/: LINGUAS  POTFILES  en.po  extra.pot  zh.po  zh_CN.po
src/: AyatanaIndicator.vala  Constants.vala.in  Indicator.vala  IndicatorButton.vala  IndicatorIcon.vala  IndicatorObject.vala  MenuButtons.vala  SubMenuButton.vala
vapi/: indicator3-0.4.vapi
